<resources>
    <string name="app_name" translatable="false">WADO Matchup</string>
    <string name="welcome_text" translatable="false">Matchup Finder</string>
    <string name="player_name">Last Name</string>
    <string name="player_first_name">First Name</string>
    <string name="button_find_matchup">Find Matchup</string>
    <string name="matchup_not_available">No Matchup Available</string>
    <string name="left_opponent">Timmy</string>
    <string name="right_opponent">TBD</string>
    <string name="table_text">Table</string>
    <string name="table_number" translatable="false">0</string>
    <string name="round_text">"Round : "</string>
    <string name="round_number" translatable="false">0</string>
    <string name="button_synch_matchup">Update Matchup</string>
    <string name="preference_file_key" translatable="false">de.winadual.wadomatchups.PREFERENCE_FILE_KEY</string>
    <string name="saved_first_name_default" translatable="false">Timmy</string>
    <string name="saved_last_name_default" translatable="false">Junior</string>
    <string name="saved_first_name" translatable="false">de.winadual.wadomatchups.PREF_FIRST_NAME</string>
    <string name="saved_last_name" translatable="false">de.winadual.wadomatchups.PREF_LAST_NAME</string>
    <string name="matchup_no_connection">Couldn\'t connect to Server</string>
    <string name="version_number" translatable="false">V 1.2</string>
    <string name="next_event">We are back with</string>
</resources>
