<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.winadual.wadomatchups.ViewMatchupActivity">

    <TextView
        android:id="@+id/noMatchupView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:hint="@string/matchup_not_available"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/leftOpponentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/left_opponent"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/rightOpponentText"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toBottomOf="@+id/roundText" />

    <TextView
        android:id="@+id/rightOpponentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/right_opponent"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/vsText"
        app:layout_constraintLeft_toRightOf="@+id/leftOpponentText"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/vsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="VS"
        android:textSize="10sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/leftOpponentText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:hint="@string/table_text"
        android:textSize="18sp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tableNumber"
        app:layout_constraintTop_toBottomOf="@+id/vsText" />

    <TextView
        android:id="@+id/tableNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/table_number"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tableText"
        app:layout_constraintLeft_toRightOf="@+id/tableText"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/roundText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/round_text"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/roundNumber"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@+id/noMatchupView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/roundNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/round_number"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/roundText"
        app:layout_constraintLeft_toRightOf="@+id/roundText"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:hint="@string/button_synch_matchup"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableText" />

</android.support.constraint.ConstraintLayout>
